@@ -273,8 +273,8 @@ filebeat.prospectors:
 
 #================================ Processors =====================================
 
-# Processors are used to reduce the number of fields in the exported event or to
-# enhance the event with external meta data. This section defines a list of processors
+# Processors are used to reduce the number of fields in the exported event or to 
+# enhance the event with external meta data. This section defines a list of processors 
 # that are applied one by one and the first one receives the initial event:
 #
 #   event -> filter1 -> event1 -> filter2 ->event2 ...
@@ -380,7 +380,7 @@ output.elasticsearch:
   #template.overwrite: false
 
   # If set to true, filebeat checks the Elasticsearch version at connect time, and if it
-  # is 2.x, it loads the file specified by the template.versions.2x.path setting. The
+  # is 2.x, it loads the file specified by the template.versions.2x.path setting. The 
   # default is true.
   #template.versions.2x.enabled: true
 
@@ -577,7 +577,7 @@ output.elasticsearch:
 
   # The name of the Redis list or channel the events are published to. The
   # default is filebeat.
-  #index: filebeat
+  #key: filebeat
 
   # The password to authenticate with. The default is no authentication.
   #password:
