@@ -351,7 +351,7 @@ output.elasticsearch:
 
   # The name of the Redis list or channel the events are published to. The
   # default is beatname.
-  #index: beatname
+  #key: beatname
 
   # The password to authenticate with. The default is no authentication.
   #password:
